Fix for bug causing all scrollbars on page to be hidden

--- a/widgets/profile-levels/edx/default/dev/profile-levels-style.css
+++ b/widgets/profile-levels/edx/default/dev/profile-levels-style.css
@@ -313,9 +313,10 @@
 
 .profile__avatar-selection-container--open {
   max-height: 250px;
-  /* overflow: scroll; */
   overflow-x: hidden;
-}::-webkit-scrollbar {
+}
+
+.profile__avatar-selection-container--open::-webkit-scrollbar {
   width: 0px;
   background: transparent;
 }
